--- a/app/src/main/res/layout/museum_layout.xml
+++ b/app/src/main/res/layout/museum_layout.xml
@@ -15,4 +15,10 @@
         android:id="@+id/foto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/button_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show More Info" />
 </LinearLayout>
